@@ -4,6 +4,7 @@ PY2 = sys.version_info[0] == 2
 PYPY = hasattr(sys, 'pypy_translation_info')
 JYTHON = sys.platform.startswith('java')
 IRONPYTHON = sys.platform == 'cli'
+CPYTHON = not PYPY and not JYTHON and not IRONPYTHON
 
 if PY2:
     range_type = xrange
